2.1.0.0 backport!
Backported LC v2.1.0.0 to be fully compatible with MC 1.16.5.